<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bt20percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bt15percent"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/bt15percent"
        android:onClick="on20PercentBtnSubmit"
        android:text="@string/btn20PercentLabel" />

    <Button
        android:id="@+id/bt10percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/bt15percent"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/bt15percent"
        android:onClick="on10PercentBtnSubmit"
        android:text="@string/btn10PercentLabel" />

    <Button
        android:id="@+id/bt15percent"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:onClick="on15PercentBtnSubmit"
        android:text="@string/btn15PercentLabel" />

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:ems="10"
        android:text="@string/etBillAmountStr" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvTipIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt10percent"
        android:layout_below="@+id/bt10percent"
        android:layout_marginTop="54dp"
        android:text="@string/tvTipIsLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTipAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipIs"
        android:layout_alignBottom="@+id/tvTipIs"
        android:layout_toRightOf="@+id/tvTipIs"
        android:text="@string/tvTipAmount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
